# option-density-viz

./: .gitignore  LICENSE  PROJECT_BOARD.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: README.md
docs/run/: chain.csv  results.json
docs/run_AAPL/: chain.csv  results.json
docs/run_btc/: chain.csv  results.json
docs/run_eth/: chain.csv  results.json
docs/run_nvda/: chain.csv  results.json
docs/run_spy/: chain.csv  results.json
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  pwiz.py
notebooks/: SVI_Test.ipynb  Suite_Test.ipynb  data_test.ipynb  full_pipeline_test.ipynb  option_viz_smoke_tests.ipynb  oviz_polygon_live_tests.ipynb
src/: __init__.py  main.py
src/cli/: main.py
src/data/: __init__.py  base.py  cache.py  deribit_api.py  historical_loader.py  okx_fetcher.py  polygon_fetcher.py  rate_limit.py  registry.py  risk_free.py  risk_free_fetchers.py  yf_fetcher.py
src/density/: __init__.py  bl.py  cdf.py  rnd.py
src/preprocess/: __init__.py  forward.py  midprice.py  pcp.py
src/viz/: __init__.py  dashboard.py  plot.py  plots.py
src/vol/: __init__.py  no_arb.py  surface.py  svi.py
tests/: conftest.py  test_data_registry_smoke.py  test_density_bl.py  test_density_cdf.py  test_historical_loader.py  test_preprocess_forward.py  test_preprocess_midprice.py  test_preprocess_pcp.py  test_risk_free.py  test_risk_free_fetchers.py  test_vol_noarb.py  test_vol_svi.py
